# zigbee2mqtt-rs

./: .configuration.yaml.swp  AGENTS.md  Cargo.toml  README.md  config.example.yaml  default.nix  flake.nix
.claude/: settings.local.json
nixos/: module.nix
src/: bridge.rs  config.rs  database.rs  error.rs  homeassistant.rs  lib.rs  main.rs
src/coordinator/: mod.rs
src/coordinator/znp/: commands.rs  frame.rs  mod.rs  transport.rs
src/devices/: mod.rs
src/mqtt/: mod.rs
src/zigbee/: mod.rs
src/zigbee/zcl/: attribute.rs  frame.rs  mod.rs
src/zigbee/zcl/clusters/: basic.rs  color.rs  humidity.rs  ias_zone.rs  illuminance.rs  level.rs  mod.rs  occupancy.rs  on_off.rs  power.rs  temperature.rs
tests/: z2m_compat.rs
