[package]
name = "zigbee2mqtt-rs"
version = "0.1.0"
edition = "2021"
description = "Zigbee to MQTT bridge written in Rust"
license = "MIT"

[[bin]]
name = "zigbee2mqtt-rs"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tokio-util = { version = "0.7", features = ["codec"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# MQTT — disable default TLS feature (uses ring/C); we connect over plain TCP
rumqttc = { version = "0.24", default-features = false }

# Byte buffers
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
hex = "0.4"
futures = "0.3"
tokio-stream = "0.1"
dashmap = "5"

[profile.release]
opt-level = "z"      # Optimize for size (good for RPi 3)
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1        # Faster compilation, still usable on RPi 3
